--- a/gallery4.html
+++ b/gallery4.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="webicon.png">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./style/style.css">
-
-
-    <title>Gallery</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="./webicon.png">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="./style/style.css">
+  <title>Gallery</title>
 </head>
-<body>
+<body id="b3">
   <div id="wrapper">
     <div id="menu">
       <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
@@ -92,37 +89,37 @@
 
     <!-- Modal -->
     <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="aboutUsTitle" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="aboutUsTitle">About Us</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-                <div>
-                    <img width="50%" src="./picture/2.jpg" alt="about us picture" class="col-md-5 col-md-offset-1 float-left">
-                    <p>
-                    &nbsp;Kitchen Update is a family owned and operated company. It was born as a collaboration of two existing companies: Good Painter LLC, who specializes in cabinet painting and refacing; and Great Décor LLC, who specializes in kitchen remodeling. Kitchen Update is a tradename of Great Décor LLC.
-                    <br><br>
-                    &nbsp;We created Kitchen Update company to provide our customers with a wide range of services to get a new look of their kitchens. We offer professional cabinet painting. Our unique process allows you to get a fresh look with maximum quality and without remodeling process hassle.
-                    <br><br>
-                    &nbsp;If you don’t like the look of your existing doors, we can easily help you by replacing them with new solid wood doors in wide range of styles. 
-                    <br><br>
-                    &nbsp;If you feel that you are so tired of your old, useless, unattractive kitchen, that even a fresh coat of paint cannot change it, then it’s time for new cabinets. At Kitchen Update you can find 13 kitchen cabinet brands, over 100 door styles and finishes; standard size, semi-custom and custom cabinets for any taste.
-                    <br><br>
-                    &nbsp;With our designer’s help and our team craftmanship you will get one of a kind custom built-in. We provide storage designs for: wine cellars, pantries, mudroom units, laundry room storage, craft room organization and more.
-                    <br><br>
-                    &nbsp;Kitchen Update is licensed and insured company. We service Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, Alexandria City County, Arlington County.  
-                    </p>      
-                </div>
-            </div>
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="aboutUsTitle">About Us</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              <div>
+                  <img width="50%" src="./picture/2.jpg" alt="about us picture" class="col-md-5 col-md-offset-1 float-left">
+                  <p>
+                  &nbsp;<span class="f2">Kitchen Update</span> is a family owned and operated company. It was born as a collaboration of two existing companies: Good Painter LLC, who specializes in cabinet painting and refacing; and Great Décor LLC, who specializes in kitchen remodeling. <span class="f2">Kitchen Update</span> is a tradename of Great Décor LLC.
+                  <br><br>
+                  &nbsp;We created <span class="f2">Kitchen Update</span> company to provide our customers with a wide range of services to get a new look of their kitchens. We offer professional cabinet painting. Our unique process allows you to get a fresh look with maximum quality and without remodeling process hassle.
+                  <br><br>
+                  &nbsp;If you don’t like the look of your existing doors, we can easily help you by replacing them with new solid wood doors in wide range of styles. 
+                  <br><br>
+                  &nbsp;If you feel that you are so tired of your old, useless, unattractive kitchen, that even a fresh coat of paint cannot change it, then it’s time for new cabinets. At <span class="f2">Kitchen Update</span> you can find 13 kitchen cabinet brands, over 100 door styles and finishes; standard size, semi-custom and custom cabinets for any taste.
+                  <br><br>
+                  &nbsp;With our designer’s help and our team craftmanship you will get one of a kind custom built-in. We provide storage designs for: wine cellars, pantries, mudroom units, laundry room storage, craft room organization and more.
+                  <br><br>
+                  &nbsp;<span class="f2">Kitchen Update</span> is licensed and insured company. We service Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, Alexandria City County, Arlington County.  
+                  </p>      
+              </div>
           </div>
         </div>
-    </div>
+      </div>
+  </div>
 
-</body>
+</body id="b3">
 </html>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
