--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title>Kitchen Update</title>
 </head>
@@ -17,17 +16,17 @@
         <div id="menu">
             <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
             <div class="r_menu">
-                <h2 >
+                <h2 class="f1">
                     <b onclick="location.href='tel:301-909-3404'">301-909-3404</b>
                 </h2>
                 <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle">
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/"><b>Home</b></a>
-                    <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs"><b>About Us</b></a>
-                    <a class="dropdown-item" href="./gallery.html"><b>Gallery</b></a>
-                    <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
+                    <a class="dropdown-item" href="/"><b class="f2">Home</b></a>
+                    <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs"><b class="f2">About Us</b></a>
+                    <a class="dropdown-item" href="./gallery.html"><b class="f2">Gallery</b></a>
+                    <a class="dropdown-item" href="./review.html"><b class="f2">Reviews</b></a>
                 </div>
             </div>
         </div>
@@ -43,7 +42,7 @@
         </div>
         <br><br><br><br><br><br><br>
         <footer class="d-flex justify-content-center pointer">
-            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
+            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span style="color:white">Privacy Policy</span></p>
         </footer>
     </div>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
@@ -62,17 +61,17 @@
                 <div>
                     <img width="50%" src="./picture/2.jpg" alt="about us picture" class="col-md-5 col-md-offset-1 float-left">
                     <p>
-                    &nbsp;Kitchen Update is a family owned and operated company. It was born as a collaboration of two existing companies: Good Painter LLC, who specializes in cabinet painting and refacing; and Great Décor LLC, who specializes in kitchen remodeling. Kitchen Update is a tradename of Great Décor LLC.
+                    &nbsp;<span class="f2">Kitchen Update</span> is a family owned and operated company. It was born as a collaboration of two existing companies: Good Painter LLC, who specializes in cabinet painting and refacing; and Great Décor LLC, who specializes in kitchen remodeling. <span class="f2">Kitchen Update</span> is a tradename of Great Décor LLC.
                     <br><br>
-                    &nbsp;We created Kitchen Update company to provide our customers with a wide range of services to get a new look of their kitchens. We offer professional cabinet painting. Our unique process allows you to get a fresh look with maximum quality and without remodeling process hassle.
+                    &nbsp;We created <span class="f2">Kitchen Update</span> company to provide our customers with a wide range of services to get a new look of their kitchens. We offer professional cabinet painting. Our unique process allows you to get a fresh look with maximum quality and without remodeling process hassle.
                     <br><br>
                     &nbsp;If you don’t like the look of your existing doors, we can easily help you by replacing them with new solid wood doors in wide range of styles. 
                     <br><br>
-                    &nbsp;If you feel that you are so tired of your old, useless, unattractive kitchen, that even a fresh coat of paint cannot change it, then it’s time for new cabinets. At Kitchen Update you can find 13 kitchen cabinet brands, over 100 door styles and finishes; standard size, semi-custom and custom cabinets for any taste.
+                    &nbsp;If you feel that you are so tired of your old, useless, unattractive kitchen, that even a fresh coat of paint cannot change it, then it’s time for new cabinets. At <span class="f2">Kitchen Update</span> you can find 13 kitchen cabinet brands, over 100 door styles and finishes; standard size, semi-custom and custom cabinets for any taste.
                     <br><br>
                     &nbsp;With our designer’s help and our team craftmanship you will get one of a kind custom built-in. We provide storage designs for: wine cellars, pantries, mudroom units, laundry room storage, craft room organization and more.
                     <br><br>
-                    &nbsp;Kitchen Update is licensed and insured company. We service Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, Alexandria City County, Arlington County.  
+                    &nbsp;<span class="f2">Kitchen Update</span> is licensed and insured company. We service Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, Alexandria City County, Arlington County.  
                     </p>      
                 </div>
             </div>
