--- a/review.html
+++ b/review.html
@@ -185,7 +185,7 @@
 
 
         <footer class="d-flex justify-content-center pointer">
-            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
+            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span style="color:white">Privacy Policy</span></p>
         </footer>
     </div>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
