--- a/policy.html
+++ b/policy.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
     <title>Kitchen Update</title>
 </head>
-<body>
+<body id="b3">
     <div id="wrapper">
         <div id="menu">
             <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
@@ -83,7 +82,7 @@
 
 
         <footer class="d-flex justify-content-center pointer">
-            <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
+            <p>@2019 Kitchen Update. All rights reserved. <span style="color:white">Privacy Policy</span></p>
         </footer>
     </div>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
@@ -99,22 +98,22 @@
               </button>
             </div>
             <div class="modal-body">
-                    <div>
-                            <img width="50%" src="./picture/2.jpg" alt="about us picture" class="col-md-5 col-md-offset-1 float-left">
-                            <p>
-                            &nbsp;Kitchen Update is a family owned and operated company. It was born as a collaboration of two existing companies: Good Painter LLC, who specializes in cabinet painting and refacing; and Great Décor LLC, who specializes in kitchen remodeling. Kitchen Update is a tradename of Great Décor LLC.
-                            <br><br>
-                            &nbsp;We created Kitchen Update company to provide our customers with a wide range of services to get a new look of their kitchens. We offer professional cabinet painting. Our unique process allows you to get a fresh look with maximum quality and without remodeling process hassle.
-                            <br><br>
-                            &nbsp;If you don’t like the look of your existing doors, we can easily help you by replacing them with new solid wood doors in wide range of styles. 
-                            <br><br>
-                            &nbsp;If you feel that you are so tired of your old, useless, unattractive kitchen, that even a fresh coat of paint cannot change it, then it’s time for new cabinets. At Kitchen Update you can find 13 kitchen cabinet brands, over 100 door styles and finishes; standard size, semi-custom and custom cabinets for any taste.
-                            <br><br>
-                            &nbsp;With our designer’s help and our team craftmanship you will get one of a kind custom built-in. We provide storage designs for: wine cellars, pantries, mudroom units, laundry room storage, craft room organization and more.
-                            <br><br>
-                            &nbsp;Kitchen Update is licensed and insured company. We service Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, Alexandria City County, Arlington County.  
-                            </p>      
-                        </div>
+                <div>
+                    <img width="50%" src="./picture/2.jpg" alt="about us picture" class="col-md-5 col-md-offset-1 float-left">
+                    <p>
+                    &nbsp;<span class="f2">Kitchen Update</span> is a family owned and operated company. It was born as a collaboration of two existing companies: Good Painter LLC, who specializes in cabinet painting and refacing; and Great Décor LLC, who specializes in kitchen remodeling. <span class="f2">Kitchen Update</span> is a tradename of Great Décor LLC.
+                    <br><br>
+                    &nbsp;We created <span class="f2">Kitchen Update</span> company to provide our customers with a wide range of services to get a new look of their kitchens. We offer professional cabinet painting. Our unique process allows you to get a fresh look with maximum quality and without remodeling process hassle.
+                    <br><br>
+                    &nbsp;If you don’t like the look of your existing doors, we can easily help you by replacing them with new solid wood doors in wide range of styles. 
+                    <br><br>
+                    &nbsp;If you feel that you are so tired of your old, useless, unattractive kitchen, that even a fresh coat of paint cannot change it, then it’s time for new cabinets. At <span class="f2">Kitchen Update</span> you can find 13 kitchen cabinet brands, over 100 door styles and finishes; standard size, semi-custom and custom cabinets for any taste.
+                    <br><br>
+                    &nbsp;With our designer’s help and our team craftmanship you will get one of a kind custom built-in. We provide storage designs for: wine cellars, pantries, mudroom units, laundry room storage, craft room organization and more.
+                    <br><br>
+                    &nbsp;<span class="f2">Kitchen Update</span> is licensed and insured company. We service Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, Alexandria City County, Arlington County.  
+                    </p>      
+                </div>
             </div>
           </div>
         </div>
@@ -261,7 +260,7 @@
         </div>
     </div>
 
-</body>
+</body id="b3">
 </html>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
