--- a/kitchen.html
+++ b/kitchen.html
@@ -65,7 +65,7 @@
             </span>
         </div>
         <div id="catalog" class="pointer">
-            <img src="./picture/kitchen/catalogs.png" class="dark" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
+            <img src="./picture/kitchen/catalogs.png" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
         </div>
         <br>
         <div class="container bg-light">
