--- a/cabinetform.html
+++ b/cabinetform.html
@@ -23,31 +23,34 @@
         <br>
         <img src="./picture/logo.png" alt="Kitchen Update" class="col-sm-7 mx-auto d-block bg-secondary">
         <br>
-        <p>Get a quote for cabinets painting</p>
+        <h3 class="txt_center"><b>Get a quote for cabinets painting</b></h3>
         <br>
         
-        <form>
+        <form action="upload.php" method="post" enctype="multipart/form-data">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="First Name" required>
+            <input type="text" class="form-control" placeholder="First Name" name='fname' required>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Last Name" required>
+            <input type="text" class="form-control" placeholder="Last Name" name='lname' required>
           </div>
           <div class="form-group">
-            <input type="email" class="form-control" placeholder="Email" required>
+            <input type="email" class="form-control" placeholder="Email" name='email' required>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Phone" required>
+            <input type="text" class="form-control" placeholder="Phone" name='phone' required>
           </div>
           <div class="form-group">
-            <textarea class="form-control" placeholder="Message" rows="3"></textarea>
+            <textarea class="form-control" placeholder="Message" rows="3" name='msg' required></textarea>
           </div>
-          <div class="form-group">
-            <label for="exampleFormControlFile1">Upload photos of existing casbinets</label>
-            <input type="file" class="form-control-file" id="exampleFormControlFile1">
+          <div class="form-group uploadBtn">
+            <label for="formControlFile1"><b>Upload photos of existing casbinets</b></label>
+            <input type="file" class="form-control-file" id="formControlFile1" name='files' accept="image/x-png,image/jpeg" multiple required>
           </div>
           <br>
-          <button type="submit" class="btn btn-primary mb-2">SEND</button>
+          <div class="uploadCtrBtn">
+            <button class="btn btn-secondary mb-2" onclick="history.back()">Cancel</button>
+            <button type="submit" class="btn btn-secondary mb-2">Send</button>  
+          </div>
         </form>
 
       </div>
@@ -55,10 +58,6 @@
     </div>
   </div>
    
-
-
-
-
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
