--- a/cabinet.html
+++ b/cabinet.html
@@ -38,9 +38,8 @@
 
         </section>
 
-        <section id="kitchen_mdg">
+        <section id="kitchen_mdg" style="margin-bottom: 5%;">
           <h1>Refresh your Kitchen with a new <span>Color</span></h1> 
-          <br><br><br><br>
         </section>
 
         <section>
@@ -78,20 +77,18 @@
         </section>
 
         <section id="kitchen_mdg1">
-            <br><br><br><br>
-            <h2>
-              <span class="dark">
-                &nbsp;
+          <h2>
+            <span class="dark"> &nbsp;
                 <span style = "color: white">
                   <i class="fas fa-info"></i>
-                  Ask us about our new service: </span><span><b>CABINETS REFACING</b></span> 
+                  Ask us about our new service: </span><span><b>CABINETS REFACING</b>
+                </span> 
                 &nbsp;
-              </span>
-            </h2>
-            <br><br><br><br>
+            </span>
+          </h2>
         </section>
         
-        <section>
+        <section id="kitch_get_quote_btn">
           <img class="mx-auto d-block pointer" src="./picture/qbutton.png" alt="Get a quote" onclick="location.href='./cabinetform.html'">
         </section>
 
