Send images by email

--- a/cabinetform.html
+++ b/cabinetform.html
@@ -44,7 +44,7 @@
           </div>
           <div class="form-group uploadBtn">
             <label for="formControlFile1"><b>Upload photos of existing casbinets</b></label>
-            <input type="file" class="form-control-file" id="formControlFile1" name='files' accept="image/x-png,image/jpeg" multiple required>
+            <input type="file" class="form-control-file" id="formControlFile1" name='files[]' accept="image/x-png,image/jpeg" multiple required>
           </div>
           <br>
           <div class="uploadCtrBtn">
