--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,8 @@
             <i class="fas fa-home"></i>
         </button>
     </section>  
+    <br>
+
 
     <div class="conteiner d-flex justify-content-center" >
       <div id="carouselExampleControls" class="carousel slide col-10 " data-ride="carousel" >
@@ -184,8 +186,22 @@
         </a>
       </div>
     </div>  
-    <br>
   </div>
+  <br>
+  <br>
+
+  <section id="kitchen_mdg1">
+    <h2>
+      <span class="dark pointer" onclick="location.href='https://www.instagram.com/Kitchen_Update/'">
+          <span style = "color: white"> Feel free to visit our instagram...</span>
+      </span>
+    </h2>
+  </section>
+
+  <br><br><br><br><br>
+  <footer class="d-flex justify-content-center pointer">
+    <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span style="color:white">Privacy Policy</span></p>
+  </footer>
 
     <!-- Modal -->
     <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="aboutUsTitle" aria-hidden="true">
