--- a/gallery3.html
+++ b/gallery3.html
@@ -79,6 +79,20 @@
       </div>
     </div> 
     <br>
+    <br>
+  
+    <section id="kitchen_mdg1">
+      <h2>
+        <span class="dark pointer" onclick="location.href='https://www.instagram.com/Kitchen_Update/'">
+            <span style = "color: white"> Feel free to visit our instagram...</span>
+        </span>
+      </h2>
+    </section>
+  
+    <br><br><br><br><br>
+    <footer class="d-flex justify-content-center pointer">
+      <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span style="color:white">Privacy Policy</span></p>
+    </footer>
     
   </div>
 
