--- a/pages/img9.html
+++ b/pages/img9.html
@@ -50,7 +50,10 @@
                 </div>
             </div>
         </section>
-
+        <Br><Br><Br><Br><Br><Br><Br><Br><Br>
+        <footer class="d-flex justify-content-center fixed-bottom pointer">
+            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span style="color:white">Privacy Policy</span></p>
+          </footer>
 
     </div>
 
