--- a/pages/img6.html
+++ b/pages/img6.html
@@ -51,7 +51,10 @@
                 </div>
             </div>
         </section>
-
+        <Br><Br><Br><Br><Br><Br><Br><Br><Br>
+        <footer class="d-flex justify-content-center fixed-bottom pointer">
+            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. <span style="color:white">Privacy Policy</span></p>
+          </footer>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
