--- a/cabinetform.html
+++ b/cabinetform.html
@@ -40,6 +40,12 @@
             <input type="text" class="form-control" placeholder="Phone" name='phone' required>
           </div>
           <div class="form-group">
+            <input type="text" class="form-control" placeholder="City" name='city' required>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Zip code" name='zip' required>
+          </div>
+          <div class="form-group">
             <textarea class="form-control" placeholder="Message" rows="3" name='msg' required></textarea>
           </div>
           <div class="form-group uploadBtn">
@@ -57,8 +63,6 @@
       <div class="col-sm"></div>
     </div>
   </div>
-   
-
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
