--- a/cabinet.html
+++ b/cabinet.html
@@ -193,21 +193,21 @@
             <div class="modal-body">
               <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                  <form id="contact-form" method="post" action="contact.php" role="form">
+                  <form id="contact-form1" method="post" action="contact.php" role="form">
                     <div class="messages"></div>                   
                     <div class="controls">       
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="form_name"><b>First name *</b></label>
-                                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your first name *" required="required" data-error="First name is required.">
+                                    <label for="form_name1"><b>First name *</b></label>
+                                    <input id="form_name1" type="text" name="name" class="form-control" placeholder="Please enter your first name *" required="required" data-error="First name is required.">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="form_lastname"><b>Last name *</b></label>
-                                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your last name *" required="required" data-error="Last name is required.">
+                                    <label for="form_lastname1"><b>Last name *</b></label>
+                                    <input id="form_lastname1" type="text" name="surname" class="form-control" placeholder="Please enter your last name *" required="required" data-error="Last name is required.">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
@@ -215,15 +215,15 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="form_city"><b>City *</b></label>
-                                    <input id="form_city" type="text" name="city" class="form-control" placeholder="Please enter your city *" required="required" data-error="City is required.">
+                                    <label for="form_city1"><b>City *</b></label>
+                                    <input id="form_city1" type="text" name="city" class="form-control" placeholder="Please enter your city *" required="required" data-error="City is required.">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <label for="form_zip"><b>Zip code *</b></label>
-                                    <input id="form_zip" type="text" name="zip" class="form-control" placeholder="Please enter your zip code *" required="required" data-error="Zip code is required.">
+                                    <label for="form_zip1"><b>Zip code *</b></label>
+                                    <input id="form_zip1" type="text" name="zip" class="form-control" placeholder="Please enter your zip code *" required="required" data-error="Zip code is required.">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
@@ -253,8 +253,8 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <label for="form_message"><b>Message *</b></label>
-                                    <textarea id="form_message" name="message" class="form-control" placeholder="Hello *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
+                                    <label for="form_message1"><b>Message *</b></label>
+                                    <textarea id="form_message1" name="message" class="form-control" placeholder="Hello *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
