--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs"><b class="f2">About Us</b></a>
                     <a class="dropdown-item" href="./gallery.html"><b class="f2">Gallery</b></a>
                     <a class="dropdown-item" href="./review.html"><b class="f2">Reviews</b></a>
+                    <a class="dropdown-item" data-toggle="modal" data-target="#callMsgModal"><b class="f2">Contact Us</b></a>
                 </div>
             </div>
         </div>
