--- a/kitchen.html
+++ b/kitchen.html
@@ -56,6 +56,12 @@
             onmouseout="this.src='./picture/kitchen/3.png'"
         >
     </div>
+    
+    <section>
+        <div id="catalog" class="pointer">
+            <img src="./picture/kitchen/catalogs.png" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
+        </div>
+    </section>
 
     <section class="bg-white">
         <br>
@@ -64,9 +70,6 @@
                 We believe the kitchen is the heart of the home and each one should be as unique as the people who live there.
                 That's why we offer cabinets that fit every style and budget.   
             </span>
-        </div>
-        <div id="catalog" class="pointer">
-            <img src="./picture/kitchen/catalogs.png" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
         </div>
         <br>
         <div class="container bg-light">
