new form kitchen

--- a/kitchen.html
+++ b/kitchen.html
@@ -45,7 +45,6 @@
 
         <img src="./picture/kitchen/2.png" 
             alt="DESIGN" 
-
             onmouseover="this.src='./picture/kitchen/2a.png'"
             onmouseout="this.src='./picture/kitchen/2.png'"
         >
@@ -59,7 +58,7 @@
 
     <section>
         <div id="catalog" class="pointer">
-            <img src="./picture/kitchen/catalogs.png" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
+            <img src="./picture/kitchen/catalogs.png" alt="" class="btn" onclick="location.href='./form1.html'">
         </div>
         <br>
     </section>
