--- a/cabinetform.html
+++ b/cabinetform.html
@@ -23,7 +23,7 @@
         <br>
         <img src="./picture/logo.png" alt="Kitchen Update" class="col-sm-7 mx-auto d-block bg-secondary">
         <br>
-        <h3 class="txt_center"><b>Get a quote for cabinets painting</b></h3>
+        <h3 class="txt_center"><b>Get a FREE Quote for CABINETS PAINTING service</b></h3>
         <br>
         
         <form action="upload.php" method="post" enctype="multipart/form-data">
@@ -49,7 +49,7 @@
             <textarea class="form-control" placeholder="Message" rows="3" name='msg' required></textarea>
           </div>
           <div class="form-group uploadBtn">
-            <label for="formControlFile1"><b>Upload photos of existing casbinets</b></label>
+            <label for="formControlFile1"><b>Upload PHOTOS of the existing cabinets</b></label>
             <input type="file" class="form-control-file" id="formControlFile1" name='files[]' accept="image/x-png,image/jpeg" multiple required>
           </div>
           <br>
