--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
                     <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs"><b>About Us</b></a>
                     <a class="dropdown-item" href="./gallery.html"><b>Gallery</b></a>
                     <a class="dropdown-item" href="./review.html"><b>Reviews</b></a>
+                    <a class="dropdown-item" href="./form2.html"><b class="f2">Contact Us</b></a>
         </div>
       </div>
     </div>
