--- a/custom.html
+++ b/custom.html
@@ -40,11 +40,10 @@
     <br><br><br><br>
 
     <section class="cust_block">
-        <div class="row">
-            <img class="col-5 dark ef" src="./picture/custom/drawings.png" alt="">
-            <img class="col-2" src="./picture/custom/arrow.png" alt="">
-            <img class="col-5 dark ef" src="./picture/custom/worker.png" alt=""> 
-        </div>
+        <img class="s_pic dark ef" src="./picture/custom/drawings.png" alt="">
+        <img class="fmiddle_pic" src="./picture/custom/arrow.png" alt="">
+        <img class="smiddle_pic" src="./picture/custom/arrowb.png" alt="">
+        <img class="s_pic dark ef" src="./picture/custom/worker.png" alt=""> 
     </section>
 
     <br><br><br>
