--- a/gallery1.html
+++ b/gallery1.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./style/style.css">
   <title>Gallery</title>
 </head>
-<body class="b3">
+<body id="b3">
   <div id="wrapper">
     <div id="menu">
       <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
@@ -128,7 +128,7 @@
       </div>
     </div>
 
-</body>
+</body
 </html>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
