--- a/gallery2.html
+++ b/gallery2.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./style/style.css">
   <title>Gallery</title>
 </head>
-<body class="b3">
+<body id="b3">
   <div id="wrapper">
     <div id="menu">
       <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
