--- a/cabinet.html
+++ b/cabinet.html
@@ -14,7 +14,7 @@
     <title>Cabinet Painting</title>
 </head>
 
-<body id="b2">
+<body id="b2a">
     <div id="wrapper">
         <section class="top">
 
