--- a/kitchen.html
+++ b/kitchen.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Kitchen Remodeling</title>
 </head>
-<body id="b3">
+<body id="b3a">
 
     <div id="menu">
         <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
