forms in progress;

--- a/form1.html
+++ b/form1.html
@@ -15,10 +15,9 @@
 </head>
 
 <body id="b2">
-   <div class="container">
-    <div class="row">
-      <div class="col-sm"></div>
-      <div class="col-md-6 panel">
+   <div class="forms">
+      <div class="empty_div"></div>
+      <div class="panel">
 
         <br>
         <img src="./picture/logo.png" alt="Kitchen Update" class="col-sm-7 mx-auto d-block bg-secondary">
@@ -60,8 +59,7 @@
         </form>
 
       </div>
-      <div class="col-sm"></div>
-    </div>
+      <div class="empty_div"></div>
   </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
