--- a/cabinetform.html
+++ b/cabinetform.html
@@ -21,9 +21,9 @@
     <div class="panel">
       <br>
       <img src="./picture/logo.png" alt="Kitchen Update" class="col-sm-7 mx-auto d-block bg-secondary">
-      <br>
+      <br><br>
       <h3 class="txt_center"><b>Get a FREE Quote for CABINETS PAINTING service</b></h3>
-      <br>  
+      <br><br>  
       <form action="upload.php" method="post" enctype="multipart/form-data">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="First Name" name='fname' required>
@@ -55,6 +55,7 @@
             <button class="btn btn-secondary mb-2" onclick="history.back()">Cancel</button>
             <button type="submit" class="btn btn-secondary mb-2">Send</button>  
           </div>
+          <div class="spacer"></div>
       </form>
     </div>
     
