--- a/form2.html
+++ b/form2.html
@@ -16,14 +16,15 @@
 
 <body id="b2">
   <div class="forms">
-    <div class="empty_div"></div>
+      <div class="empty_div"></div>
+      
       <div class="panel">
 
         <br>
         <img src="./picture/logo.png" alt="Kitchen Update" class="col-sm-7 mx-auto d-block bg-secondary">
-        <br>
+        <br><br>
         <h3 class="txt_center"><b>Request a call</b></h3>
-        <br>
+        <br><br>
         
         <form action="form2.php" method="post" enctype="multipart/form-data">
           <div class="form-group">
@@ -56,15 +57,18 @@
             <button class="btn btn-secondary mb-2" onclick="history.back()">Cancel</button>
             <button type="submit" class="btn btn-secondary mb-2">Send</button>  
           </div>
+          <div class="spacer"></div>
         </form>
 
       </div>
+
       <div class="empty_div"></div>
   </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
+
 
 </body>
 </html>
