--- a/form1.html
+++ b/form1.html
@@ -21,9 +21,9 @@
 
         <br>
         <img src="./picture/logo.png" alt="Kitchen Update" class="col-sm-7 mx-auto d-block bg-secondary">
-        <br>
+        <br><br>
         <h3 class="txt_center"><b>Get the Catalogs of the Brands we carry</b></h3>
-        <br>
+        <br><br>
         
         <form action="form1.php" method="post" enctype="multipart/form-data">
           <div class="form-group">
@@ -56,6 +56,7 @@
             <button class="btn btn-secondary mb-2" onclick="history.back()">Cancel</button>
             <button type="submit" class="btn btn-secondary mb-2">Send</button>  
           </div>
+          <div class="spacer"></div>
         </form>
 
       </div>
